# SeniorDesign-Enclosure

./: .gitignore  README.md
hw/: temp.tx
sw/MSP/: CMakeLists.txt  CMakeLists.txt.bak  flash.sh
sw/MSP/inc/: main.h
sw/MSP/src/: main.c  startup_msp432e401y_gcc.c  system_msp432e401y.c
sw/MSP/template/: template.h
